tests/codegen/compile/runtime/fail/invalid_fact_attr.stderr
error: Second fact attribute is supplied.
  --> $DIR/invalid_fact_attr.rs:10:1
   |
10 | #[fact]
   | ^^^^^^^
   |
help: Consider adding the argument kind = "fact" to:
  --> $DIR/invalid_fact_attr.rs:9:1
   |
9  | #[runtime::test(executor = "async_std")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
